--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,3 @@
-# These individuals contributed to the hbnb project in this repository 
+# This file lists all contributors to the repository.
 
-Ezra Nobrega <ezra.nobrega@outlook.com>
-Justin Majetich <justinmajetich@gmail.com>
+Raphael Imadomwinyi <info@ralvz.com>
